--- a/Projects.qmd
+++ b/Projects.qmd
@@ -1,3 +1,13 @@
 ---
 title: "Projects"
 ---
+Here is the link to the description of this project:
+
+- [Lab 1](https://mikejohnson51.github.io/csu-ess-330/labs/lab1.html#goals)
+
+Additionally, here is a link to the created website: 
+
+- [Website](https://allydiane.github.io)
+---
+
+Through the duration of this project, I learned general knowledge of Github repositories, Quarto documents, and how to use these sources to create a personal website. In additon, I gained confidence with .html, .yml, and .css files.
