--- a/index.qmd
+++ b/index.qmd
@@ -9,9 +9,9 @@ about:
     - text: LinkedIn
       href: https://www.linkedin.com/in/ally-lewis-538927292/
     - text: Email
-      href: //adlewis1@colostate.edu
-    - text: Research Information
-    - text: Warner College of Natural Resources
+      href: mailto:adlewis1@colostate.edu
+output:
+  html_document:
+    includes:
+      in_header: favicon.html
 ---
-
-I am a fourth-year student at Colorado State University, studying environmental sciences. I am interested in building a career in conservation and restoration using geospatial sciences, and am looking for any opportunity that will allow the development of useful skills in the environmental field. My core competencies include proficiency in ArcGIS and related software, Microsoft products, and introductory knowledge of Python and R coding. I am dependable, detail-oriented, and have experience in leadership.
