--- a/Projects.qmd
+++ b/Projects.qmd
@@ -2,12 +2,54 @@
 title: "Projects"
 ---
 
-Here is the link to the description of this project:
+Through the duration of Quantitative Reasoning for Ecosystem Science, I learned many valuable insights and a good introductory level knowledge of RStudio.
 
--   [Lab 1](https://mikejohnson51.github.io/csu-ess-330/labs/lab1.html#goals)
+Here are the links to all lab assignments completed over this course, including a brief description of each:
 
-Additionally, here is a link to the created website:
+[Lab 1](https://mikejohnson51.github.io/csu-ess-330/labs/lab1.html#goals)
 
--   [Website](https://allydiane.github.io)
+Additionally, here is a link to the final product:
+
+[Website](https://allydiane.github.io)
 
 Through the duration of this project, I learned general knowledge of Github repositories, Quarto documents, and how to use these sources to create a personal website. In addition, I gained confidence with .html, .yml, and .css files.
+
+[Lab 3](https://allydiane.github.io/ess-330-lab-3/lab-03.html)
+
+![](https://www.rand.org/content/rand/nsrd/projects/cat-v/jcr:content/par/imagewithclass.fit.1700x0.webp/1591107172160.webp)
+
+In this lab, we worked on our data wrangling and visualization skills through the use of the libraries tidyverse, flextable, and zoo. We used these libraries on COVID 19 data, and learned to visualize data like cumulative cases, deaths, and new cases and deaths by performing simple equations in our code.
+
+[Lab 4](https://allydiane.github.io/ESS-330-lab-4/lab_4.html)
+
+![](https://edge-es.com/wp-content/uploads/2024/10/Blue-spotted-Salamander-1_EDIT-scaled.jpg)
+
+In this lab, we did a number of statistial analyses on data from the LTER Network. This organization has collected data on cutthroat trout and salamander growth, and we used this to perform a series of analyses such as t-tests, chi-squares, and various correlations.
+
+[Lab 5](https://emilymitchell8.github.io/ess-paper-project/)
+
+![](https://i.etsystatic.com/14261824/r/il/2d47e5/4273533611/il_fullxfull.4273533611_88mo.jpg)
+
+For this week, our lab assignment was to create a final project proposal for approval. In our group of 3, each of us submitted three topic proposals. Our final approved topic was comparing the relationship between snow water equivalent data from the Joe Wright SNOTEL station, and river discharge data from the Cache la Poudre River.
+
+[Lab 6](https://allydiane.github.io/ESS-330-lab-6/lab6.html)
+
+![](https://media.geeksforgeeks.org/wp-content/uploads/20250122123657100043/introduction_to_machine_learning.webp)
+
+In this lab, we explored machine learning and predictive data modeling using hydrology data from the Catchment Attributes and Meteorology for Large-sample Studies (CAMELS). We used the library tidymodels to conduct some exploratory analysis of our data, and prep and build our model for a final, trained model to predict trends. 
+
+[Lab 7/9](https://mayamccain.github.io/ess-330-lab-07/index.html)
+
+![](https://www.wcc.nrcs.usda.gov/siteimages/551.jpg)
+
+For these two labs, further progress was made on our final project. Lab 7 consisted of rough drafts on our introduction, data collection, and methods of analysis. Lab 9 consisted of rough drafts on both the results of our analysis and the discussion of the results. 
+
+[Lab 10](https://allydiane.github.io/people-of-ess-330/lab-10.html)
+
+![](https://thumb.spokesman.com/Cv-sY5k9cOCkh1DGM6NrkojrPrY=/1200x800/smart/media.spokesman.com/photos/2018/06/20/national-border-patrol-39p3_KItE6mX.jpg)
+
+In this lab, we gained our first introduction to using spatial data in RStudio. We loaded in shapefiles and worked on data wrangling and analysis using spatial data. Some calculations we did were distances from counties to the border of the US. 
+
+[Lab 11](ESS%20330%20Final%20Project%20Lightning%20Talk%20-%20SWE_Streamflow.pdf)
+
+For our final lab assignment, we created a presentation of our findings from our final project to share with our lab group. This presentation included details on why we chose our topic, the different analyses we completed, and our findings from our comparisons. 
